# AndroidCourseCode

./: README.md  build.gradle  config.gradle  settings.gradle
APP/: build.gradle
APP/src/main/: AndroidManifest.xml
APP/src/main/res/layout/: activity_main.xml
APP/src/main/res/values/: strings.xml  styles.xml
Arch/: build.gradle
Arch/src/main/: AndroidManifest.xml
Arch/src/main/res/layout/: activity_arch.xml
Architect/src/main/: AndroidManifest.xml
NDK/: build.gradle
NDK/src/main/: AndroidManifest.xml
NDK/src/main/ndkBuild/: CMakeLists.txt  hello-jni.c
NDK/src/main/res/layout/: activity_ndk.xml
UI/: build.gradle
UI-ScreenAdapter/: build.gradle
UI-ScreenAdapter/src/main/: AndroidManifest.xml
UI-ScreenAdapter/src/main/res/layout/: activity_cut_out.xml  activity_density.xml  activity_main.xml  activity_screen.xml
UI-ScreenAdapter/src/main/res/values/: strings.xml
UI/src/main/: AndroidManifest.xml
UI/src/main/res/drawable/: custom_divider.xml  ic_arrow_back.xml  ic_rect.xml
UI/src/main/res/layout/: activity_appbar.xml  activity_canvas.xml  activity_card_view.xml  activity_cf.xml  activity_coordinator_layout.xml  activity_custom.xml  activity_custom_image_view.xml  activity_event.xml  activity_material_design.xml  activity_move_boll.xml  activity_movie_detail.xml  activity_paint.xml  activity_path.xml  activity_path_measure.xml  activity_pwd_edit_text.xml  activity_recycler_view.xml  activity_screen.xml  activity_status_bar.xml  (+10 more)
app/: build.gradle
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
(+303 files in other folders)
